--- a/vercel.json
+++ b/vercel.json
@@ -2,14 +2,8 @@
   "version": 2,
   "builds": [
     {
-      "src": "./index.ts",
+      "src": "./index.js",
       "use": "@vercel/node"
-    }
-  ],
-  "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "/"
     }
   ]
 }
