--- a/package.json
+++ b/package.json
@@ -4,8 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.ts",
-    "dev": "nodemon index.ts"
+    "build": "npm run tsc",
+    "start": "./bin/start",
+    "start:prod": "node ./dist/index.js",
+    "start:dev": "nodemon ./index.ts",
+    "dev": "nodemon --exec 'npm run start:dev' ",
+    "tsc": "tsc"
   },
   "keywords": [],
   "author": "",
