--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,15 @@
 {
-  "rewrites": [{ "src": "/(.*)", "destination": "./" }]
+  "version": 2,
+  "builds": [
+    {
+      "src": "index.js",
+      "use": "@vercel/node"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/src/(.*)",
+      "dest": "index.js"
+    }
+  ]
 }
