--- a/vercel.json
+++ b/vercel.json
@@ -2,14 +2,14 @@
   "version": 2,
   "builds": [
     {
-      "src": "index.js",
+      "src": "index.ts",
       "use": "@vercel/node"
     }
   ],
   "routes": [
     {
-      "src": "/src/(.*)",
-      "dest": "index.js"
+      "src": "/(.*)",
+      "dest": "index.ts"
     }
   ]
 }
