--- a/package.json
+++ b/package.json
@@ -5,9 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "npm run tsc",
-    "start": "./bin/start",
-    "start:prod": "node ./dist/index.js",
-    "start:dev": "nodemon ./index.ts",
+    "start:dev": "nodemon ./src/index.ts",
     "dev": "nodemon --exec 'npm run start:dev' ",
     "tsc": "tsc"
   },
