--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "npm run tsc",
-    "start:dev": "nodemon ./src/index.ts",
+    "postinstall": "prisma generate",
+    "build": "prisma generate && npm run tsc",
+    "start:dev": "nodemon ./index.ts",
     "dev": "nodemon --exec 'npm run start:dev' ",
     "tsc": "tsc"
   },
